; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/qcom/extr_clk-branch.c_clk_branch2_check_halt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/qcom/extr_clk-branch.c_clk_branch2_check_halt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_branch = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@BRANCH_NOC_FSM_STATUS_MASK = common dso_local global i32 0, align 4
@BRANCH_NOC_FSM_STATUS_SHIFT = common dso_local global i32 0, align 4
@BRANCH_CLK_OFF = common dso_local global i32 0, align 4
@BRANCH_NOC_FSM_STATUS_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_branch*, i32)* @clk_branch2_check_halt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_branch2_check_halt(%struct.clk_branch* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clk_branch*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.clk_branch* %0, %struct.clk_branch** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* @BRANCH_NOC_FSM_STATUS_MASK, align 4
  %9 = load i32, i32* @BRANCH_NOC_FSM_STATUS_SHIFT, align 4
  %10 = shl i32 %8, %9
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* @BRANCH_CLK_OFF, align 4
  %12 = load i32, i32* %7, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %7, align 4
  %14 = load %struct.clk_branch*, %struct.clk_branch** %4, align 8
  %15 = getelementptr inbounds %struct.clk_branch, %struct.clk_branch* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.clk_branch*, %struct.clk_branch** %4, align 8
  %19 = getelementptr inbounds %struct.clk_branch, %struct.clk_branch* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @regmap_read(i32 %17, i32 %20, i32* %6)
  %22 = load i32, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %39

24:                                               ; preds = %2
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %6, align 4
  %27 = and i32 %26, %25
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* @BRANCH_CLK_OFF, align 4
  %30 = and i32 %28, %29
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %24
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* @BRANCH_NOC_FSM_STATUS_ON, align 4
  %35 = icmp eq i32 %33, %34
  br label %36

36:                                               ; preds = %32, %24
  %37 = phi i1 [ true, %24 ], [ %35, %32 ]
  %38 = zext i1 %37 to i32
  store i32 %38, i32* %3, align 4
  br label %43

39:                                               ; preds = %2
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* @BRANCH_CLK_OFF, align 4
  %42 = and i32 %40, %41
  store i32 %42, i32* %3, align 4
  br label %43

43:                                               ; preds = %39, %36
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
